# openswitch-ops-pmd

./: .gitreview  CMakeLists.txt  DESIGN.md  README.md  config.c  groups  ovsdb_access.c  plug.c  plug.h  pmd.c  pmd.h.in  project.config  reviewers.config
include/: plug.h  pm_dom.h  pm_interface.h  pm_plugins.h.in  pmd.h.in
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
ops-tests/component/: test_pmd.py
ops-tests/feature/: test_ft_dom.py
plugins/i2c/: CMakeLists.txt  i2c-plugin.c
plugins/mlnx/: CMakeLists.txt  mlnx-plugin.c
src/: config.c  ovsdb_access.c  plug.c  pm_detect.c  pm_dom.c  pm_plugins.c  pmd.c
test/: CMakeLists.txt  ovsdb_access.c  pm_detect.c  pmd_test_drvr.cpp  pmd_test_fns.cpp  run_remote_tests.sh  test_pmd.py
test/files/: atoc.c  sum.c
tests/: pmd_test.md  test_pmd.py
tests/files/: atoc.c  sum.c
